assets/css/style.css
/* ... */
/***********************************************************************************************/
/* =Maps section */
/***********************************************************************************************/

#maps-section {
  position: relative;
  top: 0%;
  height: 100vh;
  background-size: cover;
}

.li-maps {
  position: relative;
  z-index: 10;
  list-style-type: none;
  padding-top: 20px;
  /*max-width: 1000px;*/
  width: 80%;
  height: auto;
  /*margin-left: -500px;
  left: 50%;*/
  text-align: center;
}

#nyu-int-map {
  width: 80%;
  height: 100%;
  text-align: center;
  margin: auto;
}

.flood-maps {
  width: 80%;
  height: 100%;
  text-align: center;
  margin: auto;
}

.pvd-maps {
  width: 100%;
  height: 100%;
  text-align: center;
  margin: auto;
}

.li-maps-2 {
  position: relative;
  top: 30px;
  z-index: 10;
  list-style-type: none;
  padding-top: 20px;
  width: 700px !important;
  height: auto;
  margin-left: -350px;
  left: 50%;
}

#map-3, .maps > figcaption {
  position: relative;
  width: 500px;
  left: 50%;
  margin-left: -250px;
}

#map-5 {
  padding-top: 20px;
}

#prison-header {
  position: relative;
  top: 20px;
}

#prisons, #map-6 {
  position: relative;
  top: -10px;
}

.pvd-maps, .flood-maps {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 20px;
  flex-direction: row;
  /*width: 1000px;*/
}

.pvd-maps >* {
  flex: 1 1 40%;
}

.flood-maps >* {
  flex: 1 1 30%;
}

#int-map-link {
  color: black;
}

#int-map-link:hover {
  color: red;
}

/***********************************************************************************************/
/* =Design section */
/***********************************************************************************************/
#design-section {
  position: relative;
  top: 60px;
  background-size: cover;
  height: 100vh;
}

.li-design > h2 {
  position: relative;
  left: 50%;
  max-width: 1000px;
  margin-left: -500px;
}

.ul-design {
  position: relative;
  top: 0px;
}

.li-design {
  position: relative;
  z-index: 10;
  list-style-type: none;
  padding-top: 0px;
  width: 700px !important;
  height: auto;
  margin-left: -350px;
  left: 50%;
}

.li-design-2 {
  position: relative;
  top: 30px;
  z-index: 10;
  list-style-type: none;
  padding-top: 20px;
  width: 1000px !important;
  height: auto;
  margin-left: -500px;
  left: 50%;
}

.journey-mapping-container {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding-bottom: 20px;
  gap: 20px;
  flex-direction: row;
  width: 100%;
}

.journey-mapping-container > * {
  flex: 1 1 100px;
}

.art-container {
  width: 80%;
  height: 100%;
  text-align: center;
  margin: auto;
}

.illustrator-art-container {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding-bottom: 20px;
  gap: 20px;
  flex-direction: row;
}

.illustrator-art-container > * {
  flex: 1 1 30%;
}

.img-text {
  position:relative;
  left:0px;
  visibility:hidden;
}

.illustrator-art:hover .img-text {
  visibility: visible;
}

.makaranta-container {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding-bottom: 20px;
  gap: 20px;
  flex-direction: row;
}

.makaranta-container > * {
  padding-top: 40px;
  flex: 1 1 20%;
}

/***********************************************************************************************/
/* =Video section */
/***********************************************************************************************/
#video-section {
  position: relative;
  top: 50px;
  background-size: cover;
}

.video > p {
  color: white;
}

.video > p > a {
  color: black;
}

.vimeo-link:hover {
  color: red;
}


.video-container {
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding-bottom: 5px;
  padding-top: 20px;
  gap: 40px;
  flex-direction: row;
  /*width: 1000px;*/
  margin: auto;
}

.video-container > * {
  z-index: 100;
}

/***********************************************************************************************/
/* =POPUP */
/***********************************************************************************************/
#ac-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10000;
  background: rgb(0,0,0,0.5)
}

#popup {
  width: 40%;
  height: 220px;
  position: relative;
  top: 150px;
  left: 0px;
  min-width: 200px;
  max-width: 400px;
  margin: auto;
  z-index: 10010;
  text-align: center;
}

#popup-text {
position: relative;
color: white;
width: 100%;
height: auto;
padding-left: 5%;
padding-top: 5%;
padding-right: 5%;
padding-bottom: 5%;
text-align: left;
font-size: 1.5vw;
background: rgb(0,0,0);
}

#popup-text > a {
color: white;
text-decoration: underline;
font-size: 1.5vw;
}

#popup-text > a:hover {
color: red;
}

/***********************************************************************************************/
/* =IMAGE ANIMATION */
/***********************************************************************************************/
/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 10000; /* Sit on top */
    padding-top: 50px; /* Location of the box */
    padding-bottom: 50px;
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
  margin: auto;
  display: block;
  width: auto;
  max-height: 100%;
  overflow: auto;
  vertical-align: middle;
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}
/* ... */

